# ntt-mcp-suite

./: .gitignore  README.md  crypto.json  debug.json  pass.json  pyproject.toml  requirements.txt  sql.json  webview.json
docs/: BURP_DOCKER_SETUP.md
scripts/: list_devices_with_path.py  manual_mcp_test_client_burp.py  manual_mcp_test_client_frida.py  manual_mcp_test_client_jadx.py  manual_mcp_test_client_nuclei.py  manual_mcp_test_client_objection.py  verify_burp_docker_setup.ps1
src/ntt_adb_mcp/: __init__.py  config.py
src/ntt_adb_mcp/server/: __init__.py  app.py  main.py
src/ntt_adb_mcp/tools/: __init__.py  devices.py  packages.py  registry.py  shell.py
src/ntt_burp_mcp/: README.md  __init__.py  config.py
src/ntt_burp_mcp/server/: __init__.py  app.py  main.py
src/ntt_burp_mcp/tools/: __init__.py  client.py  proxy.py  registry.py  scanner.py
src/ntt_frida_mcp/: __init__.py  config.py
src/ntt_frida_mcp/server/: __init__.py  app.py  main.py
src/ntt_frida_mcp/tools/: __init__.py  devices.py  hooks.py  lifecycle.py  processes.py  registry.py  sessions.py  state.py
src/ntt_jadx_mcp/: SECURITY_ANALYSIS.md
src/ntt_jadx_mcp/server/: __init__.py  app.py  main.py
src/ntt_jadx_mcp/tools/: __init__.py  class_tools.py  client.py  debug_tools.py  health.py  pagination.py  refactor_tools.py  (+5 more)
src/ntt_jadx_mcp_plugin/: GUIA-RAPIDA.md  INSTALACION.md  README.md  RESUMEN_Implementacion.md  build.gradle.kts  compilar.bat  settings.gradle.kts  test-plugin.bat
src/ntt_nuclei_mcp/: README.md  __init__.py  config.py
src/ntt_objection_mcp/: __init__.py  config.py
(+18 files in other folders)
